--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ experiencias digitales que convierten visitantes en clientes.</p>
 <section class="contact" id="contacto">
 <h2 class="section-title">Contáctanos</h2>
 <div class="contact-form">
-<form id="contactForm" action="https://formsubmit.co/richardmorenoalonso@gmail.com" method="POST" >
+<form id="contactForm" action="https://formsubmit.co/arielacostagarcia2005@gmail.com" method="POST" >
     <input type="hidden" name="_subject" value="Nuevo mensaje de contacto">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_next" value="https://arielh7.github.io/RL-Automatica/"> 
